[gd_scene load_steps=4 format=3 uid="uid://d1jj3ca6gu456"]

[ext_resource type="FontFile" uid="uid://cfpb8p1e0pltp" path="res://ui/fonts/Volcanic Dungeon.ttf" id="1_ryk0y"]
[ext_resource type="Script" path="res://ui/Game_Over.gd" id="1_sb6ov"]
[ext_resource type="Texture2D" uid="uid://bcyib8hcn15oh" path="res://ui/GameOverScreen.png" id="2_lsedd"]

[node name="Game_Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sb6ov")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lsedd")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.501961, 0.101961, 0.129412, 1)
theme_override_fonts/font = ExtResource("1_ryk0y")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 275

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="btn_restart" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../btn_main_menu")
theme_override_colors/font_pressed_color = Color(0.619608, 0.541176, 0.0470588, 1)
theme_override_colors/font_hover_color = Color(0.87451, 0.768627, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_ryk0y")
text = "RESTART"

[node name="btn_main_menu" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_restart")
focus_neighbor_bottom = NodePath("../btn_exit")
theme_override_colors/font_pressed_color = Color(0.619608, 0.541176, 0.0470588, 1)
theme_override_colors/font_hover_color = Color(0.87451, 0.768627, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_ryk0y")
text = "BACK TO MENU"

[node name="btn_exit" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_main_menu")
theme_override_colors/font_pressed_color = Color(0.619608, 0.541176, 0.0470588, 1)
theme_override_colors/font_hover_color = Color(0.87451, 0.768627, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_ryk0y")
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/btn_main_menu" to="." method="_on_btn_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
